# machine_learning

./: README.md
linear_model/: pyproject.toml
linear_model/classification/: 03_sigmoid_visualisation.py
linear_model/regression/: 01_introduction_linear_model.ipynb  02_least_squares_method.ipynb  03_gradient_descent_numpy_only.ipynb  04_learning_curves.ipynb  05_gradient_descent_stochastique.ipynb  06_SGD_Regressor_from_sklearn.ipynb  07_equation_normal.ipynb  08_SVD_method.ipynb  09_multiple regression.ipynb  09_multiple_regression.ipynb  10_polynomial_regression.ipynb  11_SGDRegressor_vs_LinearRegression.ipynb  12_regularization_and_model_penalization.ipynb  13_multicollinearity.ipynb  14_ridge.ipynb  15_lasso.ipynb  introduction_linear_model.ipynb  least_squares_method.ipynb
